Bug 344654 - "Switching to other view failed (Text View)" when user wants to design a new query in SQL mode
Summary: "Switching to other view failed (Text View)" when user wants to design a new ...
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Queries (other bugs)
Version First Reported In: 2.9.1
Platform: Other Linux
: NOR minor
Target Milestone: 2.9.3
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-28 10:32 UTC by Jarosław Staniek
Modified: 2015-04-23 07:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2015-02-28 10:32:18 UTC
"Switching to other view failed (Text View)" when user wants to design a new query in SQL mode. Thsi scenario is likely so should be possible.

Reproducible: Always
Comment 1 Jarosław Staniek 2015-04-23 07:39:58 UTC
Git commit 5aadce7dddb2afd44a1b22959da65f29e62c896c by Jaroslaw Staniek.
Committed on 23/04/2015 at 07:38.
Pushed by staniek into branch 'calligra/2.9'.

Allow to switch from the Design view containing empty query to the SQL view
FIXED-IN:2.9.3

M  +1    -1    kexi/plugins/queries/kexiquerydesignersql.cpp

http://commits.kde.org/calligra/5aadce7dddb2afd44a1b22959da65f29e62c896c