Allow to switch from the Design view containing empty query to the SQL view

BUG:344654
FIXED-IN:2.9.3